--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "less": "^4.2.0",
+    "typescript": "^5.3.3",
+    "unplugin-auto-import": "^0.17.3",
     "vite": "^5.0.8"
   }
 }
